# eosin

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.vllm.yml  eosin.py  modal_app.py  pyproject.toml
docker/: Dockerfile.parser  Dockerfile.vllm
docs/stress-tests/: 2026-04-23-single-container-32-vs-64.md
eosin/: __init__.py  __main__.py  parser.py  utils.py
eosin/backend/: __init__.py  bank_parser_api.py  bank_parser_service.py  config.modal.yaml  config.yaml  eosin_pipeline.py  ocr_pipeline.py
scripts/: convert_to_scanned.py  load_test_bank_parser.py
tests/: test_all_pdfs.py  test_eosin_pipeline.py  test_repo_readiness.py
